@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 22-Aug-2012
-#     Tweaks to sclient.rb to fix daemon problems or help uncover them at least
+#     Fix problem with log-opts being deleted and not there a second time round
 
 module Jerbil
-  # version set to 1.0.15
-  Version = '1.0.15'
+  # version set to 1.0.16
+  Version = '1.0.16'
   # date set to 22-Aug-2012
   Version_Date = '22-Aug-2012'
-  #ident string set to: jerbil-1.0.15 22-Aug-2012
-  Ident = 'jerbil-1.0.15 22-Aug-2012'
+  #ident string set to: jerbil-1.0.16 22-Aug-2012
+  Ident = 'jerbil-1.0.16 22-Aug-2012'
 end
